# vacant_back

./: .dockerignore  .env.example  .gitignore  .ignore  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.yaml  maps.json  poetry.toml  pyproject.toml  vacant.json
.github/workflows/: deploy.yml
migrations/: env.py
migrations/versions/: 06466066ec65_add_commnet_table.py  11c8f6b3c9e1_add_token_exp_column.py  11f3631df4bf_add_exteranl_id_to_role_model.py  160dcb39dbd8_add_ondelete_to_comment.py  1b3096bec0f4_alter_discipline.py  1be3cfa55347_alter_user.py  1cc3cce52b28_cascades.py  232e330d6b5b_add_user_id_to_comment.py  2a469ed95150_alter_discipline.py  2e0f5e24172c_implement_models_for_rups.py  33d36584b558_permissions.py  3d6d0626451a_add_exteranl_id_to_user.py  407a024156b6_remove_column.py  4545e7d525ed_alter_user_passport_number_field.py  456959f9630e_initial.py  4b31aead6670_add_passport_fields_to_user.py  5f7a9b105bd8_change_user_external_id_to_str.py  83feb3e0fa3f_add_application_user_id.py  869f34d79d8c_change_user_phone_to_nullable.py  9c97e915705a_add_ondeletes.py  a068ebcb393b_alter_discipline.py  b079d8a8ccf2_alter_user_pass_data_col.py  b1552e8a8986_remove_change_application_change_date.py  b1b9501614ec_add_user_type_field.py  b52b5d6a683d_add_ondelete.py  b5a72eb38296_add_token_model.py  b5e439c1339c_alter_user_passport_number_field.py  bd6eaddd47f7_alter_discipline.py  bdeb4c8b0e05_add_user_passport_number_field.py  c41c7429321b_initial.py  c61a8b15f360_add_status_table.py  c8bdcd28a0a6_alter_user.py  cd1eff9711ca_remomve_program_priority_col.py  d0af48e97c76_implement_new_auth_system.py  d80709b76830_alter_user_type_field.py  dad51f075ee2_polymorphic_models.py  df91eb5bdf1a_alter_user.py  ed610b7d709b_alter_discipline.py
src/: __init__.py  db.py  logger.py  main.py  models.py  settings.py
src/api/: __init__.py  comment.py  commnet.py  documents.py  files.py  rups.py  status.py  test.py  users.py
src/applications/: __init__.py  models.py  views.py
src/documents/: applications.py  solution.py  transfer_certificate.py
src/enums/: __init__.py  applications.py  auth.py  comment.py  document.py
src/exceptions/: __init__.py  auth.py  general.py  grpc.py  http.py
src/gateways/: admin_api.py  dto.py  kd_maps.py  maps.py
src/grpc/: __init__.py  auth_service.py  grpc_manager.py  permissions_service.py
src/models/: db.py  models.py
src/repository/: roles.py  (+9 more)
(+72 files in other folders)
